--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ numpy = "^1.24.2"
 pandas = "^1.5.3"
 matplotlib = "^3.7.0"
 bayesian-optimization = "^1.4.2"
+pillow = "^9.4.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
